# university

./: .gitignore  ActionsMenu.qml  CMakeLists.txt  Dormitory.h  EntityCell.qml  GapYear.h  LoginForm.qml  MenuButton.qml  TopBar.qml  accessrightsmodel.h  accessrightsrepository.cpp  baserepository.h  contracttype.cpp  contracttype.h  contracttypemodel.cpp  contracttyperepository.cpp  database.cpp  database.h  databasecontroller.cpp  databasecontroller.h  dbsettings.cpp  dbsettings.h  document.h  dormitorymodel.h  dormitoryrepository.cpp  dormitoryrepository.h  filecontroller.cpp  filecontroller.h  filelogger.cpp  filelogger.h  gapyearmodel.cpp  gapyearmodel.h  gapyearrepository.h  group.cpp  group.h  groupmodel.h  grouprepository.cpp  logger.h  main.cpp  main.qml  (+17 more)
controllers/: databasecontroller.cpp  databasecontroller.h  filecontroller.cpp  logincontroller.cpp  logincontroller.h  menucontroller.cpp  menucontroller.h
entities/: passport.cpp  passport.h  student.h
models/: accessrightsmodel.cpp  accessrightsmodel.h  contracttypemodel.h  documentmodel.cpp  documentmodel.h  dormitorymodel.cpp  groupmodel.cpp  passporttypemodel.h  studentmodel.cpp  studentmodel.h  usersmodel.cpp
repositories/: accessrightsrepository.h  contracttyperepository.h  documentrepository.cpp  documentrepository.h  dormitoryrepository.cpp  dormitoryrepository.h  gapyearrepository.cpp  grouprepository.h  passporttyperepository.h  studentrepository.cpp  studentrepository.h  userrepository.h
